--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </div>
           <div class="video-container">
             <video class="video-player" controls>
-                <source src="your-video-file.mp4" type="video/mp4">
+                <source src="img/영상1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
