--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <li><a href="#timeline">Synopsis</a></li>
             <li><a href="#sectionpin">Character</a></li>
             <li><a href="#video">Video</a></li>
-            <li><a href="#charcter">Character</a></li>
+            <li><a href="#gameplayimage">Game Play</a></li>
+            <li><a href="#branding">Branding</a></li>
             <li><a href="#gameplayimage">Game Play</a></li>
 
         </ul>
@@ -100,7 +101,8 @@
         <ul>
           <li>
             <div>
-              <time>img</time> 히로 저번에 큰일난 거 있지?
+                    
+              <time>히로</time> 히로 저번에 큰일난 거 있지?
             </div>
           </li>
           <li>
@@ -164,6 +166,7 @@
             <div class="image-container">
                 <img src="img/mainpage.png" alt="Branding">
             </div>
+            <div class="orangeright"></div> 
     </section>
 
 
@@ -171,12 +174,15 @@
       <div class="image-container">
           <img src="img/userpage.png" alt="Branding">
       </div>
-</section>
+      <div class="orangeleft"></div> 
+      <div class="whiteright"></div> 
+    </section>
 
 <section id="store" class="store">
   <div class="image-container">
       <img src="img/store.png" alt="Branding">
   </div>
+  <h3>악세서리를 올려보세요</h3>
   <div id="result">악세서리를 올려보세요!</div>
   <div class="answer-box">
       <div class="answer a"></div>
@@ -189,7 +195,7 @@
     </div>
     <section id="gameplayimage" class="gameplayimage"> 
       <div class="image-container">
-          <img src="img/BRANDING.png" alt="Branding">
+          <img src="img/gameplayimage.png" alt="Branding">
       </div>
       <div class="playimg">
           <img src="img/play.png" alt="Hiro">
@@ -279,7 +285,7 @@
         ScrollTrigger.scrollerProxy(pageContainer, {
             scrollTop(value) {
                 return arguments.length
-                    ? scroller.scrollTo(value, 0, 3000)
+                    ? scroller.scrollTo(value, 0, 5000)
                     : scroller.scroll.instance.scroll.y;
             },
             getBoundingClientRect() {
@@ -416,9 +422,9 @@
                 let className = ui.helper.attr("class").split(' ')[1];
                 let message;
                 if (className === 'c') {
-                    message = '정답입니다!';
+                    message = '옷입니다!';
                 } else {
-                    message = '틀렸습니다!';
+                    message = '악세서리!';
                 }
                 $(this)
                     .removeClass()
