--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
       <div class="contactsolid"></div>
       <div class="orange-rectangle"></div> <!-- Add this div -->
       <div class="white-rectangle"></div>
+      <p>
+        <span>CONTACT US</span><br>
+        <span>IF YOU LIKED IT!</span>
+      </p>
   </section>
     <footer>
         <div class="footer-container">
