--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
             <li><a href="#timeline">Synopsis</a></li>
             <li><a href="#sectionpin">Character</a></li>
             <li><a href="#video">Video</a></li>
+            <li><a href="#mainpage">Main Page</a></li>
+            <li><a href="#userpage">User Page</a></li>
+            <li><a href="#store">Store</a></li>
             <li><a href="#gameplayimage">Game Play</a></li>
             <li><a href="#branding">Branding</a></li>
-            <li><a href="#gameplayimage">Game Play</a></li>
 
         </ul>
     </nav>
@@ -158,8 +160,11 @@
       </section>
 
       <section id="mainpage" class="mainpage">
-            
-            <div class="orangeright"></div> 
+        <ul>
+            <span>Planning: Seo Yeon-woo, Design: Kyungjin Lee, Programming: Seunghyun Im</span>
+          </ul>
+            <div class="orangeright">
+            </div> 
     </section>
 
 
@@ -207,11 +212,16 @@
     <section id="contact" class="contact">
       <div class="contactsolid"></div>
       <div class="orange-rectangle"></div> <!-- Add this div -->
-      <div class="white-rectangle"></div>
+      <div class="white-rectangle">
+        <ul>
+            <span>Planning: Seo Yeon-woo, Design: Kyungjin Lee, Programming: Seunghyun Im</span>
+          </ul>
+      </div>
       <p>
         <span>CONTACT US</span><br>
         <span>IF YOU LIKED IT!</span>
       </p>
+      
   </section>
     <footer>
         <div class="footer-container">
