--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
 <!-- 로고 -->
@@ -142,10 +142,6 @@
                 <img src="img/character/히로1.png" alt="">
                 <img class="gif-overlay" src="img/히로1.gif" alt="">
             </div>
-            <div class="image-container">
-                <img src="img/c.png" alt="">
-                <!-- Add gif overlay for 'c.png' if needed -->
-            </div>
         </div>
     </section>
 </div>
@@ -193,6 +189,28 @@
         어떻게 하면 안전교육을 재밌고 더 쉽게 할 수 있을까 고민하는 과정에서 탄생했습니다!</h4>
 </section>
 
+<!--CHARTINTRO-->
+<section class="chartintro">
+    <div class="content-layer">
+      <div class="text-content">
+        <div class="left-column">
+          <p class="section-title">
+            <span style="color: orange;">Cause of death</span> <br>in a child safety accident
+          </p>
+          <p class="section-subtitle">“어린이 사망원인 1위는 안전사고”</p>
+        </div>
+        <div class="right-column">
+          <p class="section-text">
+            어린이 안전사고는 통상 가장 안전한 장소로 인식되는 가정에서 가장 많이 발생했고<br>
+            어린이 안전사고 예방을 위한 지식은 크게 부족한 것으로 조사됐다.<br>
+            멈추지 않는 어린이 교통 사고로 어린이 안전교육의 중요성 증가 하였고<br>
+            이를 통해 아이들의 위기대처 능력 필요성 증가하였다.
+          </p>
+        </div>
+      </div>
+      <div class="chart"></div>
+    </div>
+  </section>
 <!--CHART1-->
 <section class="backgroundmade">
     <img src="img/chart1.png" alt="Chart 1">
