--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         <ul>
             <li><a href="#main">챕터</a></li>
             <li><a href="#timeline">시놉시스</a></li>
-            <li><a href="#sectionpin">캐릭터</a></li>
+            <li><a href="#sectionPin">캐릭터</a></li>
             <li><a href="#video">비디오 </a></li>
-            <li><a href="#mainpage">메인페이지</a></li>
-            <li><a href="#userpage">유저페이지</a></li>
             <li><a href="#store">스토어</a></li>
-            <li><a href="#gameplayimage">게임 플레이</a></li>
+            <li><a href="#store">게임 플레이</a></li>
             <li><a href="#branding">브랜딩</a></li>
+            <li><a href="#userpersona">페르소나</a></li>
+            <li><a href="#design">디자인</a></li>
         </ul>
     </nav>
 <!--chapter 나중에 3d로 바꿔-->
@@ -268,6 +268,27 @@
     </div>
 </section>
 
+<section id="userpersona" class="userpersona" style="background-color: #FFC47F;">
+    <div class="persona">
+        <img src="img/persona.png">
+    </div>
+    <div class="personab" style="background-color: #FFC47F;">
+        <img src="img/persona1b.png">
+    </div>
+</section>
+<section class="hirophone">
+   
+    <div class="hirophone">
+        <img src="img/hirophone.png">
+    </div>
+</section>
+
+<section id="design" class="design">
+   
+    <div class="design">
+        <img src="img/design.png">
+    </div>
+</section>
 <!--CONTACT-->
 <section id="contact" class="contact">
     <div class="contactsolid"></div>
@@ -291,7 +312,7 @@
               <span>Copyright&copy; 2024 Team HIRO, a student at Kaywon University of Arts. All rights reserved.</span>
           </p>
           <div class="footer-logo">
-              <img src="img/logo.png" alt="Footer Logo">
+              <img src="img/HIROON.png" alt="Footer Logo">
           </div>
       </div>
   </footer>
