--- a/index.html
+++ b/index.html
@@ -216,56 +216,20 @@
 
 <!--CHARTINTRO-->
 <section class="chartintro">
-    <div class="content-layer">
-      <div class="text-content">
-        <div class="left-column">
-          <p class="section-title">
-            <span style="color: orange;">Cause of death</span> <br>in a child safety accident
-          </p>
-          <p class="section-subtitle">“어린이 사망원인 1위는 안전사고”</p>
-        </div>
-        <div class="right-column">
-          <p class="section-text">
-            어린이 안전사고는 통상 가장 안전한 장소로 인식되는 가정에서 가장 많이 발생했고<br>
-            어린이 안전사고 예방을 위한 지식은 크게 부족한 것으로 조사됐다.<br>
-            멈추지 않는 어린이 교통 사고로 어린이 안전교육의 중요성 증가 하였고<br>
-            이를 통해 아이들의 위기대처 능력 필요성 증가하였다.
-          </p>
-        </div>
-      </div>
-      <div class="chart"></div>
-    </div>
+    <img src="img/chartintro.png">
+  </section>
+  <section class="background">
+    <img src="img/background (2).png">
   </section>
 <!--CHART1-->
 <section class="backgroundmade">
-    <img src="img/chart1.png" alt="Chart 1">
-    <img src="img/chart2.png" alt="Chart 2">
-    <img src="img/chart3.png" alt="Chart 3">
-    <img src="img/chart4.png" alt="Chart 4">
+    <img src="img/chart1 (2).png" alt="Chart 1">
+   
 </section>
 <!--WHYMADE?-->
-<section class="why">
-    <div class="image-with-text">
-        <img src="img/why1.png" alt="Why 1">
-        <div class="text">
-            <p>Problem<br>아이들의 한정된 집중도로 인해 오랫동안 게임을 집중해서
-                진행하지 못한다는 문제점을 발견하였다.
-                증가하고 있는 추세의 아이들의 게임 중독 문제</p>
-        </div>
-    </div>
-</section>
+
 <section class="why" style="background-color: #FFC47F;">
-    <div class="image-with-text">
-        <div class="text">
-            <p>Solution<br>아이들의 집중도 증가를 위한
-                학습보상 요소인 상점 시스템 도입
-                또한 플레이 할 수 사용자의 캐릭터가 진화할 수 있는 해결책 제시
-                
-                게임 중독 문제또한 하루에 한 챕터만을 진행 할 수 있도록 제한하여
-                아이들의 게임 중독에 대한 방안을 마련하였다</p>
-        </div>
-        <img src="img/why2.png" alt="Why 2">
-    </div>
+    <img src="img/ps.png">
 </section>
 
 <section id="userpersona" class="userpersona" style="background-color: #FFC47F;">
