--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <section id="branding" class="branding"> 
     <img src="img/HIROOFF.png" alt="Original Image">
     <h4>흔히 안전한 장소라 인식되는 장소에서, 사실은 안전사고가 굉장히 빈번한다는 사실을 알고 계시나요? 
-        어떻게 하면 안전교육을 재밌고 더 쉽게 할 수 있을까<br>고민하는 과정에서 탄생했습니다!</h4>
+        <br>어떻게 하면 안전교육을 재밌고 더 쉽게 할 수 있을까 고민하는 과정에서 탄생했습니다!</h4>
 </section>
 
 <!--CHARTINTRO-->
