--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
             <div class="slide"><img src="img/gameplay1.png" alt="Image 1"></div>
             <div class="slide"><img src="img/gameplay2.png" alt="Image 2"></div>
             <div class="slide"><img src="img/gameplay3.png" alt="Image 3"></div>
+            <div class="slide"><img src="img/gameplay1.png" alt="Image 1"></div>
+            <div class="slide"><img src="img/gameplay2.png" alt="Image 2"></div>
+            <div class="slide"><img src="img/gameplay3.png" alt="Image 3"></div>
+            <div class="slide"><img src="img/gameplay1.png" alt="Image 1"></div>
+            <div class="slide"><img src="img/gameplay2.png" alt="Image 2"></div>
+            <div class="slide"><img src="img/gameplay3.png" alt="Image 3"></div>
         </div>
     </div>
 </section>
